// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copy.sql > line 1 1`] = `[Error: syntax error at or near "\\"]`;

exports[`copy.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 30,
                          "sval": {
                            "sval": "DOS",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "abc
def",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 50,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 29,
                          "sval": {
                            "sval": "Unix",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "abc
def",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 48,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 29,
                          "sval": {
                            "sval": "Mac",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 35,
                          "sval": {
                            "sval": "abc
def",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 47,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 29,
                          "sval": {
                            "sval": "esc\\ape",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 41,
                          "sval": {
                            "sval": "a\\r\\
\\
\\nb",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 61,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 21 1`] = `[Error: syntax error at or near "\\"]`;

exports[`copy.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 20,
            "relname": "copytest2",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "TableLikeClause": {
                "relation": {
                  "inh": true,
                  "location": 36,
                  "relname": "copytest",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 26 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "larg": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "copytest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_EXCEPT",
          "rarg": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 46,
                  "relname": "copytest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 39,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 39,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 11,
                "relname": "copytest2",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 32 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 36 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "larg": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 16,
                  "relname": "copytest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 9,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 9,
                    },
                  },
                },
              },
            ],
          },
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_EXCEPT",
          "rarg": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 46,
                  "relname": "copytest2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 39,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 39,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 50,
            "relname": "copytest3",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "c1",
                "is_local": true,
                "location": 63,
                "typeName": {
                  "location": 66,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "col with , comma",
                "is_local": true,
                "location": 72,
                "typeName": {
                  "location": 91,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "col with " quote",
                "is_local": true,
                "location": 98,
                "typeName": {
                  "location": 119,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CopyStmt": {
          "is_from": true,
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "csv",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "format",
                "location": 28,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Boolean": {
                    "boolval": true,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "header",
                "location": 32,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 7,
            "relname": "copytest3",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 50 1`] = `[Error: syntax error at or near "this"]`;

exports[`copy.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 20,
            "relname": "copytest4",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "c1",
                "is_local": true,
                "location": 33,
                "typeName": {
                  "location": 36,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "colname with tab: 	",
                "is_local": true,
                "location": 42,
                "typeName": {
                  "location": 64,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 60 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CopyStmt": {
          "is_from": true,
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "header",
                "location": 29,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 7,
            "relname": "copytest4",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 62 1`] = `[Error: syntax error at or near "this"]`;

exports[`copy.sql > line 68 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 102,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 121,
                  "name": "b",
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_LIST",
          },
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 77,
                "typeName": {
                  "location": 79,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 85,
                "typeName": {
                  "location": 87,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 93,
                "typeName": {
                  "location": 95,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "parted_copytest_a1",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 35,
                "typeName": {
                  "location": 37,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 43,
                "typeName": {
                  "location": 45,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 50,
                "typeName": {
                  "location": 52,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "parted_copytest_a2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 34,
                "typeName": {
                  "location": 36,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "c",
                "is_local": true,
                "location": 41,
                "typeName": {
                  "location": 43,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "b",
                "is_local": true,
                "location": 49,
                "typeName": {
                  "location": 51,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "PartitionCmd": {
                    "bound": {
                      "listdatums": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 80,
                          },
                        },
                      ],
                      "location": 77,
                      "strategy": "l",
                    },
                    "name": {
                      "inh": true,
                      "location": 47,
                      "relname": "parted_copytest_a1",
                      "relpersistence": "p",
                    },
                  },
                },
                "subtype": "AT_AttachPartition",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "PartitionCmd": {
                    "bound": {
                      "listdatums": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 79,
                          },
                        },
                      ],
                      "location": 76,
                      "strategy": "l",
                    },
                    "name": {
                      "inh": true,
                      "location": 46,
                      "relname": "parted_copytest_a2",
                      "relpersistence": "p",
                    },
                  },
                },
                "subtype": "AT_AttachPartition",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 153,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "x",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 207,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1000,
                                      },
                                      "location": 209,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 191,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 176,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "x",
                            },
                          },
                        ],
                        "location": 176,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 178,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 178,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 180,
                    "val": {
                      "A_Const": {
                        "location": 180,
                        "sval": {
                          "sval": "One",
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "x",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1001,
                                      },
                                      "location": 67,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1010,
                                      },
                                      "location": 72,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 51,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 36,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "x",
                            },
                          },
                        ],
                        "location": 36,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 38,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 40,
                    "val": {
                      "A_Const": {
                        "location": 40,
                        "sval": {
                          "sval": "Two",
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "x",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1011,
                                      },
                                      "location": 67,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1020,
                                      },
                                      "location": 72,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 51,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 36,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "x",
                            },
                          },
                        ],
                        "location": 36,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 38,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 38,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 40,
                    "val": {
                      "A_Const": {
                        "location": 40,
                        "sval": {
                          "sval": "One",
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 87 1`] = `[Error: syntax error at or near "\\"]`;

exports[`copy.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 11,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 92 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 94 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 97 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 10,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 98 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 100 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 49,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "tableoid",
                    },
                  },
                ],
                "location": 74,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "tableoid",
                                },
                              },
                            ],
                            "location": 92,
                          },
                        },
                        "location": 100,
                        "typeName": {
                          "location": 102,
                          "names": [
                            {
                              "String": {
                                "sval": "regclass",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 110,
                    "typeName": {
                      "location": 112,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "tableoid",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 17,
                    "typeName": {
                      "location": 19,
                      "names": [
                        {
                          "String": {
                            "sval": "regclass",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "sum",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 103 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 11,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 105 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "part_ins_func",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 108,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
begin
  return new;
end;
",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 125,
              },
            },
          ],
          "returnType": {
            "location": 100,
            "names": [
              {
                "String": {
                  "sval": "trigger",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 112 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTrigStmt": {
          "events": 4,
          "funcname": [
            {
              "String": {
                "sval": "part_ins_func",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 49,
            "relname": "parted_copytest_a2",
            "relpersistence": "p",
          },
          "row": true,
          "timing": 2,
          "trigname": "part_ins_trig",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 117 1`] = `[Error: syntax error at or near ":"]`;

exports[`copy.sql > line 119 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 49,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "ColumnRef": {
                "fields": [
                  {
                    "String": {
                      "sval": "tableoid",
                    },
                  },
                ],
                "location": 74,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "TypeCast": {
                    "arg": {
                      "TypeCast": {
                        "arg": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "tableoid",
                                },
                              },
                            ],
                            "location": 92,
                          },
                        },
                        "location": 100,
                        "typeName": {
                          "location": 102,
                          "names": [
                            {
                              "String": {
                                "sval": "regclass",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 110,
                    "typeName": {
                      "location": 112,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "tableoid",
                            },
                          },
                        ],
                        "location": 9,
                      },
                    },
                    "location": 17,
                    "typeName": {
                      "location": 19,
                      "names": [
                        {
                          "String": {
                            "sval": "regclass",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "a",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "sum",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 122 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 17,
                "relname": "parted_copytest",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 124 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "indexParams": [
            {
              "IndexElem": {
                "name": "b",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 17,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 125 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "parted_copytest_a2",
                    },
                  },
                  {
                    "String": {
                      "sval": "part_ins_trig",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TRIGGER",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 126 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CopyStmt": {
          "is_from": true,
          "relation": {
            "inh": true,
            "location": 7,
            "relname": "parted_copytest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 127 1`] = `[Error: syntax error at or near "et"]`;

exports[`copy.sql > line 129 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 356,
                "relname": "parted_si",
                "relpersistence": "p",
              },
            },
          ],
          "groupClause": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 375,
              },
            },
            {
              "A_Const": {
                "ival": {
                  "ival": 2,
                },
                "location": 378,
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 389,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 302,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "tableoid",
                            },
                          },
                        ],
                        "location": 302,
                      },
                    },
                    "location": 310,
                    "typeName": {
                      "location": 312,
                      "names": [
                        {
                          "String": {
                            "sval": "regclass",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 322,
                "name": "is_even",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "id",
                                },
                              },
                            ],
                            "location": 322,
                          },
                        },
                        "location": 325,
                        "name": [
                          {
                            "String": {
                              "sval": "%",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 327,
                          },
                        },
                      },
                    },
                    "location": 329,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 331,
                      },
                    },
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 342,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 342,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`copy.sql > line 135 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "parted_si",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
